--- a/Task_2_1_2/build.gradle
+++ b/Task_2_1_2/build.gradle
@@ -33,3 +33,8 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
